--- a/src/assets/styles/showWeather.module.css
+++ b/src/assets/styles/showWeather.module.css
@@ -46,3 +46,13 @@
     border-radius: 20px;
     overflow: hidden;
 }
+
+.error {
+    color: #842029;
+    background-color: #f8d7da;
+    border-color: #f5c2c7;
+    padding: 20px;
+    margin-top: 20px;
+    text-align: center;
+    border-radius: 5px;
+}
