--- a/src/assets/styles/weatherData.module.css
+++ b/src/assets/styles/weatherData.module.css
@@ -2,10 +2,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-around;
+    height: 540px;
     background: linear-gradient( to right, #2c5364, #203a43, #0f2027 );
     /* background-color: #2c5364; */
     /* width: fit-content; */
-    padding: 20px;
+    /* padding: 20px; */
 }
 
 .temperture p {
@@ -21,6 +23,10 @@
     /* justify-content: space-between; */
     width: 100%;
     align-items: center;
+}
+
+.weatherData div:last-child {
+    border-bottom: none;
 }
 
 .weatherData div p span:first-child {
